--- a/GAMES/20LUCKY-G.html
+++ b/GAMES/20LUCKY-G.html
@@ -188,6 +188,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">8</td>
+                <td class="days"><small>21th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">89</td>
+                <td class="winning">7</td>
+                <td class="winning">81</td>
+                <td class="winning">71</td>
+                <td class="winning" id="lbw">80</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">68</td>
+                <td class="machine">48</td>
+                <td class="machine">9</td>
+                <td class="machine">42</td>
+                <td class="machine" id="lbm">50</td>
+            </tr>
+        </tbody>
+
+                                <!-- day9-->
+        <tbody>
+            <tr>
+                <td class="serial-num">9</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
