--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -12,7 +12,7 @@
             text-align: center;
         }
         nav a {
-            font-size: 30px;
+            font-size: 24px;
         }
 
         main {
@@ -22,13 +22,14 @@
             
         }
         section {
-            color: #fff;
+            color: #ececec;
             width: 300px;
             text-align: center;
-            box-shadow: 2px 2px 5px 0px #000;
+            box-shadow: 1px 2px 5px 0px #000;
             border-radius: 5px;
         }
         article {
+            width: 100%;
             margin-block-end: 3em;
         }
         .date {
@@ -44,9 +45,9 @@
             text-transform: uppercase;
         }
         p {
-            line-height: 1;
+            line-height: 0.2; 
             font-weight: bolder;
-            font-size: 25px;
+            font-size: 28px;
         }
         span {
             padding: 5px;
@@ -78,69 +79,69 @@
     </header>
     <main>
         <section>
-            <h2 class="date"> Sunday 19/11/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p>W: <span class="winning">66</span> - <span class="winning">32</span> - <span class="winning">27</span> - <span class="winning">50</span> - <span class="winning">12</span></p>
-                <p>M: <span class="machine">84</span> - <span class="machine">19</span> - <span class="machine">16</span> - <span class="machine">89</span> - <span class="machine">28</span></p>
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p>W: <span class="winning">81</span> - <span class="winning">73</span> - <span class="winning">19</span> - <span class="winning">37</span> - <span class="winning">38</span></p>
-                <p>M: <span class="machine">88</span> - <span class="machine">46</span> - <span class="machine">24</span> - <span class="machine">90</span> - <span class="machine">79</span></p>
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p>W: <span class="winning">73</span> - <span class="winning">62</span> - <span class="winning">59</span> - <span class="winning">47</span> - <span class="winning">72</span></p>
-                <p>M: <span class="machine">19</span> - <span class="machine">80</span> - <span class="machine">17</span> - <span class="machine">61</span> - <span class="machine">46</span></p>
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p>W: <span class="winning">29</span> - <span class="winning">31</span> - <span class="winning">71</span> - <span class="winning">62</span> - <span class="winning">73</span></p>
-                <p>M: <span class="machine">69</span> - <span class="machine">80</span> - <span class="machine">53</span> - <span class="machine">74</span> - <span class="machine">57</span></p>
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p>W: <span class="winning">55</span> - <span class="winning">53</span> - <span class="winning">51</span> - <span class="winning">8</span> - <span class="winning">13</span></p>
-                <p>M: <span class="machine">5</span> - <span class="machine">39</span> - <span class="machine">63</span> - <span class="machine">45</span> - <span class="machine">68</span></p>
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p>W: <span class="winning">64</span> - <span class="winning">2</span> - <span class="winning">28</span> - <span class="winning">41</span> - <span class="winning">80</span></p>
-                <p>M: <span class="machine">32</span> - <span class="machine">51</span> - <span class="machine">37</span> - <span class="machine">47</span> - <span class="machine">19</span></p>
-            </article>
-        </section>
-        <section>
             <h2 class="date">Monday 20/11/2023</h2>
             <article>
                 <h3 class="game">Diamond</h3>
-                <p>W: <span class="winning">15</span> - <span class="winning">19</span> - <span class="winning">83</span> - <span class="winning">63</span> - <span class="winning">20</span></p>
-                <p>M: <span class="machine">35</span> - <span class="machine">86</span> - <span class="machine">42</span> - <span class="machine">27</span> - <span class="machine">17</span></p>
+                <p><span class="winning">15</span> - <span class="winning">19</span> - <span class="winning">83</span> - <span class="winning">63</span> - <span class="winning">20</span></p>
+                <p><span class="machine">35</span> - <span class="machine">86</span> - <span class="machine">42</span> - <span class="machine">27</span> - <span class="machine">17</span></p>
             </article>
             <article>
                 <h3 class="game">People</h3>
-                <p>W: <span class="winning">89</span> - <span class="winning">76</span> - <span class="winning">42</span> - <span class="winning">83</span> - <span class="winning">52</span></p>
-                <p>M: <span class="machine">55</span> - <span class="machine">8</span> - <span class="machine">53</span> - <span class="machine">26</span> - <span class="machine">35</span></p>
+                <p><span class="winning">89</span> - <span class="winning">76</span> - <span class="winning">42</span> - <span class="winning">83</span> - <span class="winning">52</span></p>
+                <p><span class="machine">55</span> - <span class="machine">8</span> - <span class="machine">53</span> - <span class="machine">26</span> - <span class="machine">35</span></p>
             </article>
             <article>
                 <h3 class="game">Bingo</h3>
-                <p>W: <span class="winning">9</span> - <span class="winning">88</span> - <span class="winning">29</span> - <span class="winning">47</span> - <span class="winning">57</span></p>
-                <p>M: <span class="machine">38</span> - <span class="machine">4</span> - <span class="machine">16</span> - <span class="machine">86</span> - <span class="machine">40</span></p>
+                <p><span class="winning">9</span> - <span class="winning">88</span> - <span class="winning">29</span> - <span class="winning">47</span> - <span class="winning">57</span></p>
+                <p><span class="machine">38</span> - <span class="machine">4</span> - <span class="machine">16</span> - <span class="machine">86</span> - <span class="machine">40</span></p>
             </article>
             <article>
                 <h3 class="game">Metro</h3>
-                <p>W: <span class="winning">69</span> - <span class="winning">45</span> - <span class="winning">1</span> - <span class="winning">34</span> - <span class="winning">16</span></p>
-                <p>M: <span class="machine">47</span> - <span class="machine">53</span> - <span class="machine">29</span> - <span class="machine">7</span> - <span class="machine">27</span></p>
+                <p><span class="winning">69</span> - <span class="winning">45</span> - <span class="winning">1</span> - <span class="winning">34</span> - <span class="winning">16</span></p>
+                <p><span class="machine">47</span> - <span class="machine">53</span> - <span class="machine">29</span> - <span class="machine">7</span> - <span class="machine">27</span></p>
             </article>
             <article>
                 <h3 class="game">MSP</h3>
-                <p>W: <span class="winning">12</span> - <span class="winning">23</span> - <span class="winning">69</span> - <span class="winning">62</span> - <span class="winning">84</span></p>
-                <p>M: <span class="machine">74</span> - <span class="machine">33</span> - <span class="machine">76</span> - <span class="machine">53</span> - <span class="machine">8</span></p>
+                <p><span class="winning">12</span> - <span class="winning">23</span> - <span class="winning">69</span> - <span class="winning">62</span> - <span class="winning">84</span></p>
+                <p><span class="machine">74</span> - <span class="machine">33</span> - <span class="machine">76</span> - <span class="machine">53</span> - <span class="machine">8</span></p>
             </article>
             <article>
                 <h3 class="game">International</h3>
-                <p>W: <span class="winning">9</span> - <span class="winning">60</span> - <span class="winning">67</span> - <span class="winning">10</span> - <span class="winning">59</span></p>
-                <p>M: <span class="machine">36</span> - <span class="machine">78</span> - <span class="machine">90</span> - <span class="machine">83</span> - <span class="machine">75</span></p>
+                <p><span class="winning">9</span> - <span class="winning">60</span> - <span class="winning">67</span> - <span class="winning">10</span> - <span class="winning">59</span></p>
+                <p><span class="machine">36</span> - <span class="machine">78</span> - <span class="machine">90</span> - <span class="machine">83</span> - <span class="machine">75</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date">Tuesday 21/11/2023</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p><span class="winning">31</span> - <span class="winning">48</span> - <span class="winning">47</span> - <span class="winning">34</span> - <span class="winning">29</span></p>
+                <p><span class="machine">57</span> - <span class="machine">76</span> - <span class="machine">50</span> - <span class="machine">53</span> - <span class="machine">38</span></p>
+            </article>
+            <article>
+                <h3 class="game">O6</h3>
+                <p><span class="winning">16</span> - <span class="winning">2</span> - <span class="winning">4</span> - <span class="winning">46</span> - <span class="winning">6</span></p>
+                <p><span class="machine">64</span> - <span class="machine">28</span> - <span class="machine">60</span> - <span class="machine">19</span> - <span class="machine">47</span></p>
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p><span class="winning">77</span> - <span class="winning">55</span> - <span class="winning">11</span> - <span class="winning">44</span> - <span class="winning">68</span></p>
+                <p><span class="machine">42</span> - <span class="machine">45</span> - <span class="machine">64</span> - <span class="machine">2</span> - <span class="machine">26</span></p>
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p><span class="winning">49</span> - <span class="winning">58</span> - <span class="winning">51</span> - <span class="winning">64</span> - <span class="winning">19</span></p>
+                <p><span class="machine">39</span> - <span class="machine">31</span> - <span class="machine">15</span> - <span class="machine">74</span> - <span class="machine">83</span></p>
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p><span class="winning">89</span> - <span class="winning">7</span> - <span class="winning">81</span> - <span class="winning">71</span> - <span class="winning">80</span></p>
+                <p><span class="machine">68</span> - <span class="machine">48</span> - <span class="machine">9</span> - <span class="machine">42</span> - <span class="machine">50</span></p>
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p><span class="winning">58</span> - <span class="winning">48</span> - <span class="winning">75</span> - <span class="winning">15</span> - <span class="winning">32</span></p>
+                <p><span class="machine">37</span> - <span class="machine">62</span> - <span class="machine">2</span> - <span class="machine">64</span> - <span class="machine">43</span></p>
             </article>
         </section>
     </main>
