--- a/GAMES/11Gold.html
+++ b/GAMES/11Gold.html
@@ -342,6 +342,29 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>tues 21th Nov</small></td>
+            
+                <!-- winning-->
+                <td class="winning">31</td>
+                <td class="winning">48</td>
+                <td class="winning">47</td>
+                <td class="winning">34</td>
+                <td class="winning" id="lbw">29</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">57</td>
+                <td class="machine">76</td>
+                <td class="machine">50</td>
+                <td class="machine">53</td>
+                <td class="machine" id="lbm">38</td>
+            </tr>
+        </tbody>
+
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
             
                 <!-- winning-->
