--- a/GAMES/12O6.html
+++ b/GAMES/12O6.html
@@ -344,6 +344,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>tues 21th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">16</td>
+                <td class="winning">2</td>
+                <td class="winning">4</td>
+                <td class="winning">46</td>
+                <td class="winning" id="lbw">6</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">64</td>
+                <td class="machine">28</td>
+                <td class="machine">60</td>
+                <td class="machine">19</td>
+                <td class="machine" id="lbm">47</td>
+            </tr>
+        </tbody>
+
+                                    <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
