--- a/GAMES/13Jackpot.html
+++ b/GAMES/13Jackpot.html
@@ -342,6 +342,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>tues 21th Nov</small></td>
+           
+                <!-- winning-->
+                <td class="winning">77</td>
+                <td class="winning">55</td>
+                <td class="winning">11</td>
+                <td class="winning">44</td>
+                <td class="winning" id="lbw">68</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">42</td>
+                <td class="machine">45</td>
+                <td class="machine">64</td>
+                <td class="machine">2</td>
+                <td class="machine" id="lbm">26</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
            
                 <!-- winning-->
