--- a/GAMES/15Super.html
+++ b/GAMES/15Super.html
@@ -342,6 +342,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
+                <td class="days"><small>tues 21th Nov</small></td>
+            
+                <!-- winning-->
+                <td class="winning">58</td>
+                <td class="winning">48</td>
+                <td class="winning">75</td>
+                <td class="winning">15</td>
+                <td class="winning" id="lbw">32</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">37</td>
+                <td class="machine">62</td>
+                <td class="machine">2</td>
+                <td class="machine">64</td>
+                <td class="machine" id="lbm">43</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
                 <td class="days"><small></small></td>
             
                 <!-- winning-->
