--- a/GAMES/21Midweek.html
+++ b/GAMES/21Midweek.html
@@ -187,6 +187,28 @@
         <tbody>
             <tr>
                 <td class="serial-num">8</td>
+                <td class="days"><small>22nd Nov</small></td>
+               
+                <!-- winning-->
+                <td class="winning">3</td>
+                <td class="winning">41</td>
+                <td class="winning">34</td>
+                <td class="winning">62</td>
+                <td class="winning" id="lbw">64</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">73</td>
+                <td class="machine">61</td>
+                <td class="machine">69</td>
+                <td class="machine">82</td>
+                <td class="machine" id="lbm">50</td>
+            </tr>
+        </tbody>
+
+                                <!-- day9-->
+        <tbody>
+            <tr>
+                <td class="serial-num">9</td>
                 <td class="days"><small></small></td>
                
                 <!-- winning-->
