--- a/GAMES/12O6.html
+++ b/GAMES/12O6.html
@@ -344,7 +344,7 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
-                <td class="days"><small>tues 21th Nov</small></td>
+                <td class="days"><small>tues 21st Nov</small></td>
            
                 <!-- winning-->
                 <td class="winning">16</td>
