--- a/GAMES/15Super.html
+++ b/GAMES/15Super.html
@@ -342,7 +342,7 @@
         <tbody>
             <tr>
                 <td class="serial-num">15</td>
-                <td class="days"><small>tues 21th Nov</small></td>
+                <td class="days"><small>tues 21st Nov</small></td>
             
                 <!-- winning-->
                 <td class="winning">58</td>
