--- a/GAMES/20LUCKY-G.html
+++ b/GAMES/20LUCKY-G.html
@@ -188,7 +188,7 @@
         <tbody>
             <tr>
                 <td class="serial-num">8</td>
-                <td class="days"><small>21th Nov</small></td>
+                <td class="days"><small>21st Nov</small></td>
            
                 <!-- winning-->
                 <td class="winning">89</td>
