--- a/GAMES/2Mark-II.html
+++ b/GAMES/2Mark-II.html
@@ -366,8 +366,30 @@
         <tbody>
             <tr>
                 <td class="serial-num">16</td>
-                <td class="days"><small></small></td>
+                <td class="days"><small>wed 22nd Nov</small></td>
                
+                <!-- winning-->
+                <td class="winning">76</td>
+                <td class="winning">15</td>
+                <td class="winning">3</td>
+                <td class="winning">86</td>
+                <td class="winning" id="lbw">4</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">43</td>
+                <td class="machine">40</td>
+                <td class="machine">26</td>
+                <td class="machine">7</td>
+                <td class="machine" id="lbm">78</td>
+            </tr>
+        </tbody>
+
+                                <!-- day17-->
+        <tbody>
+            <tr>
+                <td class="serial-num">16</td>
+                <td class="days"><small></small></td>
+           
                 <!-- winning-->
                 <td class="winning"></td>
                 <td class="winning"></td>
