--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -46,8 +46,8 @@
         }
         p {
             line-height: 0.2; 
-            font-weight: bolder;
-            font-size: 28px;
+            font-weight: bold;
+            font-size: 25px;
         }
         span {
             padding: 5px;
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Monday 20/11/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p><span class="winning">15</span> - <span class="winning">19</span> - <span class="winning">83</span> - <span class="winning">63</span> - <span class="winning">20</span></p>
-                <p><span class="machine">35</span> - <span class="machine">86</span> - <span class="machine">42</span> - <span class="machine">27</span> - <span class="machine">17</span></p>
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p><span class="winning">89</span> - <span class="winning">76</span> - <span class="winning">42</span> - <span class="winning">83</span> - <span class="winning">52</span></p>
-                <p><span class="machine">55</span> - <span class="machine">8</span> - <span class="machine">53</span> - <span class="machine">26</span> - <span class="machine">35</span></p>
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p><span class="winning">9</span> - <span class="winning">88</span> - <span class="winning">29</span> - <span class="winning">47</span> - <span class="winning">57</span></p>
-                <p><span class="machine">38</span> - <span class="machine">4</span> - <span class="machine">16</span> - <span class="machine">86</span> - <span class="machine">40</span></p>
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p><span class="winning">69</span> - <span class="winning">45</span> - <span class="winning">1</span> - <span class="winning">34</span> - <span class="winning">16</span></p>
-                <p><span class="machine">47</span> - <span class="machine">53</span> - <span class="machine">29</span> - <span class="machine">7</span> - <span class="machine">27</span></p>
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p><span class="winning">12</span> - <span class="winning">23</span> - <span class="winning">69</span> - <span class="winning">62</span> - <span class="winning">84</span></p>
-                <p><span class="machine">74</span> - <span class="machine">33</span> - <span class="machine">76</span> - <span class="machine">53</span> - <span class="machine">8</span></p>
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p><span class="winning">9</span> - <span class="winning">60</span> - <span class="winning">67</span> - <span class="winning">10</span> - <span class="winning">59</span></p>
-                <p><span class="machine">36</span> - <span class="machine">78</span> - <span class="machine">90</span> - <span class="machine">83</span> - <span class="machine">75</span></p>
-            </article>
-        </section>
-        <section>
             <h2 class="date">Tuesday 21/11/2023</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Super</h3>
                 <p><span class="winning">58</span> - <span class="winning">48</span> - <span class="winning">75</span> - <span class="winning">15</span> - <span class="winning">32</span></p>
                 <p><span class="machine">37</span> - <span class="machine">62</span> - <span class="machine">2</span> - <span class="machine">64</span> - <span class="machine">43</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date">wednesday 22/11/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p><span class="winning">46</span> - <span class="winning">4</span> - <span class="winning">29</span> - <span class="winning">15</span> - <span class="winning">66</span></p>
+                <p><span class="machine">9</span> - <span class="machine">62</span> - <span class="machine">18</span> - <span class="machine">16</span> - <span class="machine">26</span></p>
+            </article>
+            <article>
+                <h3 class="game">Mark II</h3>
+                <p><span class="winning">76</span> - <span class="winning">15</span> - <span class="winning">3</span> - <span class="winning">86</span> - <span class="winning">4</span></p>
+                <p><span class="machine">43</span> - <span class="machine">40</span> - <span class="machine">26</span> - <span class="machine">7</span> - <span class="machine">78</span></p>
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p><span class="winning">60</span> - <span class="winning">55</span> - <span class="winning">34</span> - <span class="winning">61</span> - <span class="winning">28</span></p>
+                <p><span class="machine">59</span> - <span class="machine">6</span> - <span class="machine">50</span> - <span class="machine">51</span> - <span class="machine">22</span></p>
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p><span class="winning">81</span> - <span class="winning">7</span> - <span class="winning">52</span> - <span class="winning">41</span> - <span class="winning">72</span></p>
+                <p><span class="machine">10</span> - <span class="machine">38</span> - <span class="machine">77</span> - <span class="machine">68</span> - <span class="machine">20</span></p>
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p><span class="winning">3</span> - <span class="winning">41</span> - <span class="winning">34</span> - <span class="winning">62</span> - <span class="winning">64</span></p>
+                <p><span class="machine">73</span> - <span class="machine">61</span> - <span class="machine">69</span> - <span class="machine">82</span> - <span class="machine">50</span></p>
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p><span class="winning">64</span> - <span class="winning">21</span> - <span class="winning">71</span> - <span class="winning">49</span> - <span class="winning">28</span></p>
+                <p><span class="machine">36</span> - <span class="machine">32</span> - <span class="machine">65</span> - <span class="machine">72</span> - <span class="machine">22</span></p>
             </article>
         </section>
     </main>
