--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Tuesday 21/11/2023</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p><span class="winning">31</span> - <span class="winning">48</span> - <span class="winning">47</span> - <span class="winning">34</span> - <span class="winning">29</span></p>
-                <p><span class="machine">57</span> - <span class="machine">76</span> - <span class="machine">50</span> - <span class="machine">53</span> - <span class="machine">38</span></p>
-            </article>
-            <article>
-                <h3 class="game">O6</h3>
-                <p><span class="winning">16</span> - <span class="winning">2</span> - <span class="winning">4</span> - <span class="winning">46</span> - <span class="winning">6</span></p>
-                <p><span class="machine">64</span> - <span class="machine">28</span> - <span class="machine">60</span> - <span class="machine">19</span> - <span class="machine">47</span></p>
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p><span class="winning">77</span> - <span class="winning">55</span> - <span class="winning">11</span> - <span class="winning">44</span> - <span class="winning">68</span></p>
-                <p><span class="machine">42</span> - <span class="machine">45</span> - <span class="machine">64</span> - <span class="machine">2</span> - <span class="machine">26</span></p>
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p><span class="winning">49</span> - <span class="winning">58</span> - <span class="winning">51</span> - <span class="winning">64</span> - <span class="winning">19</span></p>
-                <p><span class="machine">39</span> - <span class="machine">31</span> - <span class="machine">15</span> - <span class="machine">74</span> - <span class="machine">83</span></p>
-            </article>
-            <article>
-                <h3 class="game">Lucky G</h3>
-                <p><span class="winning">89</span> - <span class="winning">7</span> - <span class="winning">81</span> - <span class="winning">71</span> - <span class="winning">80</span></p>
-                <p><span class="machine">68</span> - <span class="machine">48</span> - <span class="machine">9</span> - <span class="machine">42</span> - <span class="machine">50</span></p>
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p><span class="winning">58</span> - <span class="winning">48</span> - <span class="winning">75</span> - <span class="winning">15</span> - <span class="winning">32</span></p>
-                <p><span class="machine">37</span> - <span class="machine">62</span> - <span class="machine">2</span> - <span class="machine">64</span> - <span class="machine">43</span></p>
-            </article>
-        </section>
-        <section>
             <h2 class="date">wednesday 22/11/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Lucky</h3>
                 <p><span class="winning">64</span> - <span class="winning">21</span> - <span class="winning">71</span> - <span class="winning">49</span> - <span class="winning">28</span></p>
                 <p><span class="machine">36</span> - <span class="machine">32</span> - <span class="machine">65</span> - <span class="machine">72</span> - <span class="machine">22</span></p>
+            </article>
+        </section>
+        <section>
+            <h2 class="date">thursday 23/11/2023</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">22 - 10 - 23 - 86 - 63</p>
+                <p class="machine">26 - 88 - 77 - 66 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">6 - 79 - 89 - 36 - 11</p>
+                <p class="machine">73 - 35 - 41 - 59 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">79 - 21 - 78 - 52 - 81</p>
+                <p class="machine">49 - 25 - 88 - 56 - 23</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">71 - 67 - 40 - 44 - 85</p>
+                <p class="machine">72 - 57 - 64 - 87 - 32</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">74 - 70 - 15 - 23 - 57</p>
+                <p class="machine">44 - 10 - 25 - 67 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">68 - 60 - 69 - 19 - 23</p>
+                <p class="machine">77 - 80 - 5 - 14 - 16</p>        
             </article>
         </section>
     </main>
