--- a/GAMES/8Bingo.html
+++ b/GAMES/8Bingo.html
@@ -357,9 +357,32 @@
             </tr>
         </tbody>
 
+                                <!-- day16-->
         <tbody>
             <tr>
                 <td class="serial-num">16</td>
+                <td class="days"><small>thurs 23rd Nov</small></td>
+            
+                <!-- winning-->
+                <td class="winning">68</td>
+                <td class="winning">60</td>
+                <td class="winning">69</td>
+                <td class="winning">19</td>
+                <td class="winning" id="lbw">23</td>
+
+                <!-- machine-->
+                <td class="machine" id="fbm">77</td>
+                <td class="machine">80</td>
+                <td class="machine">5</td>
+                <td class="machine">14</td>
+                <td class="machine" id="lbm">16</td>
+            </tr>
+        </tbody>
+
+                                <!-- day16-->
+        <tbody>
+            <tr>
+                <td class="serial-num">17</td>
                 <td class="days"><small></small></td>
             
                 <!-- winning-->
