--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">wednesday 22/11/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p><span class="winning">46</span> - <span class="winning">4</span> - <span class="winning">29</span> - <span class="winning">15</span> - <span class="winning">66</span></p>
-                <p><span class="machine">9</span> - <span class="machine">62</span> - <span class="machine">18</span> - <span class="machine">16</span> - <span class="machine">26</span></p>
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p><span class="winning">76</span> - <span class="winning">15</span> - <span class="winning">3</span> - <span class="winning">86</span> - <span class="winning">4</span></p>
-                <p><span class="machine">43</span> - <span class="machine">40</span> - <span class="machine">26</span> - <span class="machine">7</span> - <span class="machine">78</span></p>
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p><span class="winning">60</span> - <span class="winning">55</span> - <span class="winning">34</span> - <span class="winning">61</span> - <span class="winning">28</span></p>
-                <p><span class="machine">59</span> - <span class="machine">6</span> - <span class="machine">50</span> - <span class="machine">51</span> - <span class="machine">22</span></p>
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p><span class="winning">81</span> - <span class="winning">7</span> - <span class="winning">52</span> - <span class="winning">41</span> - <span class="winning">72</span></p>
-                <p><span class="machine">10</span> - <span class="machine">38</span> - <span class="machine">77</span> - <span class="machine">68</span> - <span class="machine">20</span></p>
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p><span class="winning">3</span> - <span class="winning">41</span> - <span class="winning">34</span> - <span class="winning">62</span> - <span class="winning">64</span></p>
-                <p><span class="machine">73</span> - <span class="machine">61</span> - <span class="machine">69</span> - <span class="machine">82</span> - <span class="machine">50</span></p>
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p><span class="winning">64</span> - <span class="winning">21</span> - <span class="winning">71</span> - <span class="winning">49</span> - <span class="winning">28</span></p>
-                <p><span class="machine">36</span> - <span class="machine">32</span> - <span class="machine">65</span> - <span class="machine">72</span> - <span class="machine">22</span></p>
-            </article>
-        </section>
-        <section>
             <h2 class="date">thursday 23/11/2023</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Bingo</h3>
                 <p class="winning">68 - 60 - 69 - 19 - 23</p>
                 <p class="machine">77 - 80 - 5 - 14 - 16</p>        
+            </article>
+        </section>
+        <section>
+            <h2 class="date">Friday 24/11/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">28 - 44 - 46 - 21 - 60</p>
+                <p class="machine">7 - 38 - 40 - 4 - 67</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">4 - 21 - 66 - 11 - 53</p>
+                <p class="machine">24 - 90 - 77 - 75 - 14</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">50 - 4 - 49 - 59 - 68</p>
+                <p class="machine">53 - 11 - 79 - 26 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">31 - 16 - 74 - 17 - 68</p>
+                <p class="machine">33 - 27 - 90 - 10 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">75 - 14 - 7 - 80 - 51</p>
+                <p class="machine">21 - 43 - 81 - 29 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p class="winning">52 - 18 - 27 - 88 - 61</p>
+                <p class="machine">74 - 24 - 31 - 44 - 32</p>        
             </article>
         </section>
     </main>
