--- a/classification.html
+++ b/classification.html
@@ -48,8 +48,18 @@
         }
 
         button {
+            color: #fff;
             width: 200px;
-            margin-top: 15px; 
+            padding: 10px;
+            margin-top: 5px;
+            background: linear-gradient(#0000ff, #0000ffce);
+            border: none;
+            border-radius: 5px;
+        }
+        button:hover {
+            background: #0303d6;
+            transform:scale(1.090);
+            transition: 0.4s;
         }
         
 
