--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">thursday 23/11/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">22 - 10 - 23 - 86 - 63</p>
-                <p class="machine">26 - 88 - 77 - 66 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">6 - 79 - 89 - 36 - 11</p>
-                <p class="machine">73 - 35 - 41 - 59 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">79 - 21 - 78 - 52 - 81</p>
-                <p class="machine">49 - 25 - 88 - 56 - 23</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">71 - 67 - 40 - 44 - 85</p>
-                <p class="machine">72 - 57 - 64 - 87 - 32</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">74 - 70 - 15 - 23 - 57</p>
-                <p class="machine">44 - 10 - 25 - 67 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">68 - 60 - 69 - 19 - 23</p>
-                <p class="machine">77 - 80 - 5 - 14 - 16</p>        
-            </article>
-        </section>
-        <section>
             <h2 class="date">Friday 24/11/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Vag</h3>
                 <p class="winning">52 - 18 - 27 - 88 - 61</p>
                 <p class="machine">74 - 24 - 31 - 44 - 32</p>        
+            </article>
+        </section>
+        <section>
+            <h2 class="date">saturday 25/11/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">57 - 28 - 31 - 59 - 17</p>
+                <p class="machine">10 - 36 - 25 - 74 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game"> Super</h3>
+                <p class="winning">62 - 86 - 75 - 47 - 32</p>
+                <p class="machine">26 - 54 - 28 - 79 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">49 - 78 - 47 - 90 - 51</p>
+                <p class="machine">87 - 50 - 1 - 84 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">O6</h3>
+                <p class="winning">88 - 63 - 3 - 65 - 76</p>
+                <p class="machine">90 - 62 - 2 - 16 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">47 - 46 - 29 - 73 - 41</p>
+                <p class="machine">84 - 66 - 59 - 18 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">74 - 57 - 4 - 1 - 90</p>
+                <p class="machine">19 - 73 - 2 - 72 - 46</p>        
             </article>
         </section>
     </main>
