--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -49,10 +49,10 @@
             font-weight: bold;
             font-size: 25px;
         }
-        span {
+        /* span {
             padding: 5px;
             border-radius: 50px;
-        }
+        } */
         .winning {
             color: #0000ff;
         }
@@ -78,39 +78,6 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2 class="date">Friday 24/11/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">28 - 44 - 46 - 21 - 60</p>
-                <p class="machine">7 - 38 - 40 - 4 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">4 - 21 - 66 - 11 - 53</p>
-                <p class="machine">24 - 90 - 77 - 75 - 14</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">50 - 4 - 49 - 59 - 68</p>
-                <p class="machine">53 - 11 - 79 - 26 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">31 - 16 - 74 - 17 - 68</p>
-                <p class="machine">33 - 27 - 90 - 10 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">75 - 14 - 7 - 80 - 51</p>
-                <p class="machine">21 - 43 - 81 - 29 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">52 - 18 - 27 - 88 - 61</p>
-                <p class="machine">74 - 24 - 31 - 44 - 32</p>        
-            </article>
-        </section>
         <section>
             <h2 class="date">saturday 25/11/2023</h2>
             <article>
@@ -142,6 +109,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">74 - 57 - 4 - 1 - 90</p>
                 <p class="machine">19 - 73 - 2 - 72 - 46</p>        
+            </article>
+        </section>
+                        <!-- game 2-->
+        <section>
+            <h2 class="date">Sunday 26/11/2023</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">90 - 64 - 79 - 31 - 34</p>
+                <p class="machine">52 - 50 - 55 - 70 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">Mark II</h3>
+                <p class="winning">28 - 46 - 54 - 76 - 56</p>
+                <p class="machine">70 - 75 - 55 - 68 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">21 - 37 - 87 - 50 - 8</p>
+                <p class="machine">58 - 11 - 33 - 39 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">15 - 23 - 79 - 20 - 60</p>
+                <p class="machine">64 - 2 - 84 - 66 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">42 - 62 - 72 - 13 - 63</p>
+                <p class="machine">30 - 48 - 38 - 54 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">22 - 15 - 31 - 60 - 14</p>
+                <p class="machine">59 - 54 - 11 - 53 - 21</p>        
             </article>
         </section>
     </main>
