--- a/GAMES/9Metro.html
+++ b/GAMES/9Metro.html
@@ -387,6 +387,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">17</td>
+                    <td class="days"><small>mon 27th Nov</small></td>
+            
+                    <!-- winning-->
+                    <td class="winning">68</td>
+                    <td class="winning">77</td>
+                    <td class="winning">83</td>
+                    <td class="winning">19</td>
+                    <td class="winning" id="lbw">38</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">87</td>
+                    <td class="machine">44</td>
+                    <td class="machine">34</td>
+                    <td class="machine">23</td>
+                    <td class="machine" id="lbm">27</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day18-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">18</td>
                     <td class="days"><small></small></td>
             
                     <!-- winning-->
