--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,40 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">saturday 25/11/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">57 - 28 - 31 - 59 - 17</p>
-                <p class="machine">10 - 36 - 25 - 74 - 9</p>        
-            </article>
-            <article>
-                <h3 class="game"> Super</h3>
-                <p class="winning">62 - 86 - 75 - 47 - 32</p>
-                <p class="machine">26 - 54 - 28 - 79 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">49 - 78 - 47 - 90 - 51</p>
-                <p class="machine">87 - 50 - 1 - 84 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">O6</h3>
-                <p class="winning">88 - 63 - 3 - 65 - 76</p>
-                <p class="machine">90 - 62 - 2 - 16 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">47 - 46 - 29 - 73 - 41</p>
-                <p class="machine">84 - 66 - 59 - 18 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">74 - 57 - 4 - 1 - 90</p>
-                <p class="machine">19 - 73 - 2 - 72 - 46</p>        
-            </article>
-        </section>
-                        <!-- game 2-->
-        <section>
             <h2 class="date">Sunday 26/11/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -145,6 +111,40 @@
                 <p class="machine">59 - 54 - 11 - 53 - 21</p>        
             </article>
         </section>
+        <section>
+            <h2 class="date">Monday 27/11/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">11 - 4 - 6 - 89 - 32</p>
+                <p class="machine">72 - 5 - 14 - 38 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Peoples</h3>
+                <p class="winning">55 - 12 - 59 - 15 - 4</p>
+                <p class="machine">75 - 67 - 10 - 16 - 8</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">81 - 24 - 86 - 82 - 46</p>
+                <p class="machine">32 - 65 - 33 - 63 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">68 - 77 - 83 - 19 - 38</p>
+                <p class="machine">87 - 44 - 34 - 23 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">21 - 5 - 89 - 61 - 34</p>
+                <p class="machine">19 - 76 - 26 - 74 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">35 - 41 - 25 - 43 - 22</p>
+                <p class="machine">13 - 88 - 76 - 5 - 87</p>        
+            </article>
+        </section>
+
     </main>
     
 
