--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Sunday 26/11/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">90 - 64 - 79 - 31 - 34</p>
-                <p class="machine">52 - 50 - 55 - 70 - 44</p>        
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p class="winning">28 - 46 - 54 - 76 - 56</p>
-                <p class="machine">70 - 75 - 55 - 68 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">21 - 37 - 87 - 50 - 8</p>
-                <p class="machine">58 - 11 - 33 - 39 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">15 - 23 - 79 - 20 - 60</p>
-                <p class="machine">64 - 2 - 84 - 66 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">42 - 62 - 72 - 13 - 63</p>
-                <p class="machine">30 - 48 - 38 - 54 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">22 - 15 - 31 - 60 - 14</p>
-                <p class="machine">59 - 54 - 11 - 53 - 21</p>        
-            </article>
-        </section>
-        <section>
             <h2 class="date">Monday 27/11/2023</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -144,7 +111,39 @@
                 <p class="machine">13 - 88 - 76 - 5 - 87</p>        
             </article>
         </section>
-
+        <section>
+            <h2 class="date">Tuesday 28/11/2023</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">47 - 90 - 38 - 31 - 70</p>
+                <p class="machine">61 - 43 - 57 - 79 - 19</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">32 - 87 - 31 - 72 - 24</p>
+                <p class="machine">70 - 65 - 16 - 56 - 48</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">49 - 60 - 10 - 72 - 48</p>
+                <p class="machine">32 - 27 - 39 - 23 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">42 - 27 - 73 - 5 - 84</p>
+                <p class="machine">14 - 25 - 2 - 89 - 34</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY G</h3>
+                <p class="winning">54 - 84 - 70 - 31 - 39</p>
+                <p class="machine">62 - 21 - 56 - 60 - 25</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">48 - 26 - 75 - 59 - 11</p>
+                <p class="machine">50 - 18 - 12 - 83 - 22</p>        
+            </article>
+        </section>
     </main>
     
 
